--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,2 +1,15 @@
-<h1>Homes#top</h1>
-<p>Find me in app/views/homes/top.html.erb</p>
+<p>ようこそ！就職活動中の皆さん!</br>
+当サイトは今まであなたがしてきた面接の体験を自由に投稿したり、</br>
+または、他のユーザーの体験を閲覧することができます！</br>
+就職活動は情報が命。当サイトで少しでも多くの情報を集めましょう！</br>
+よりよい未来のために！</p>
+
+
+<%= link_to new_user_registration_path do %>
+<p>今すぐ始める</p>
+<% end %>
+
+<p>既にご登録済みの方は</p>
+<%= link_to new_user_session_path do %>
+<p>こちら</p>
+<% end %>
