--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,13 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+<h3>会員情報編集</h3>
+<%= form_with model: @user, url: user_path(@user.id), local: true do |f| %>
+<p>画像編集</p>
+<%= f.file_field :image %>
+<p>名前</p>
+<p>姓</p>
+<%= f.text_field :first_name %>
+<p>名</p>
+<%= f.text_field :last_name %>
+
+<%= f.submit '変更を保存' %>
+
+<% end %>
