--- a/app/views/users/unsubscribe.html.erb
+++ b/app/views/users/unsubscribe.html.erb
@@ -1,2 +1,7 @@
-<h1>Users#unsubscribe</h1>
-<p>Find me in app/views/users/unsubscribe.html.erb</p>
+<h2>本当にに退会しますか？</h2>
+<p>退会後は他ユーザーの投稿は閲覧可能のままですが、</br>
+自身での投稿はできなくなります。</br>
+退会する場合は、「退会する」をクリックしてください。</p>
+
+<%= link_to '退会する', user_withdraw_path, method: :patch, "data-confirm"=>"本当に退会しますか？" %>
+<%= link_to 'キャンセル',user_path(@user.id) %>
