--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,6 +10,6 @@
 <%= link_to '投稿する', root_path %>
 
 <%= link_to '編集', edit_user_path(@user.id) %>
-<%= link_to '退会', user_unsubscribe_path %>
+<%= link_to '退会', users_unsubscribe_path %>
 
 <li>お気に入り</li>
