--- a/app/views/experiences/edit.html.erb
+++ b/app/views/experiences/edit.html.erb
@@ -1,2 +1,23 @@
-<h1>Experiences#edit</h1>
-<p>Find me in app/views/experiences/edit.html.erb</p>
+<h3>投稿編集</h3>
+<%= form_with model: @experience, url: experience_path(@experience), local: true do |f| %>
+<p>タイトル</p>
+<%= f.text_field :title %>
+<p>企業名</p>
+<%= f.text_field :name %>
+<p>業種</p>
+<%= f.collection_select(:genre_id, @genres, :id ,:name, {prompt: "選択してください"}) %>
+<p>選考状況</p>
+<%= f.select :situation, [['一次','一次'],['二次','二次'],['三次','三次'],['三次以降','三次以降'],['最終','最終']], include_blank: "選択して下さい" %>
+<p>時間</p>
+<%= f.select :time, [['30分未満','30分未満'],['約30分','約30分'],['約45分','約45分'],['約1時間','約1時間'],['1時間以上','1時間以上']], include_blank: "選択して下さい" %>
+<p>形式</p>
+<%= f.select :format, [['個人面接(1:1)','個人面接(1:1)'],['個人面接(1:多)','個人面接(1:多)'],['集団面接','集団面接'],['リモート面接','リモート面接']], include_blank: "選択して下さい" %>
+<p>雰囲気</p>
+<%= f.text_area :atomosphere %>
+<p>質問</p>
+<%= f.text_area :question %>
+<p>感想</p>
+<%= f.text_area :impression %>
+<%= f.submit '変更を保存' %>
+
+<% end %>
