--- a/app/views/experiences/index.html.erb
+++ b/app/views/experiences/index.html.erb
@@ -1,2 +1,15 @@
-<h1>Experiences#index</h1>
-<p>Find me in app/views/experiences/index.html.erb</p>
+<p>ユーザー情報</p>
+<% if @user.image.attached? %>
+<%= image_tag @user.image, size: "100x100" %>
+<% else %>
+<%= image_tag 'no_image.jpg', size: "100x100" %>
+<% end %>
+<%= @user.name %>
+<%= link_to 'マイページ', user_path(@user) %>
+<%= link_to '投稿する', new_experience_path %>
+<h3>投稿一覧</h3>
+<% @experiences.each do |experience| %>
+<%= link_to experience_path(experience.id) do %>
+<%= experience.title %>
+<% end %>
+<% end %>
