--- a/app/views/experiences/show.html.erb
+++ b/app/views/experiences/show.html.erb
@@ -5,7 +5,7 @@
 <%= image_tag 'no_image.jpg', size: "100x100" %>
 <% end %>
 <%= @user.name %>
-<%= link_to 'マイページ', user_path(@user) %>
+<%= link_to 'マイページ', user_path(@user.id) %>
 <%= link_to '投稿する', new_experience_path %>
 <h3>投稿詳細</h3>
 <p>タイトル</p>
