--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,11 +15,11 @@
     <h3>Success! Job Hunting</h3>
     <% end %>
 
-    <%= link_to root_path do %>
+    <%= link_to experiences_path do %>
     <p>投稿一覧</p>
     <% end %>
    <% if user_signed_in? %>
-    <%= link_to user_path(current_user) do %>
+    <%= link_to user_path(current_user.id) do %>
     <p>マイページ</p>
     <% end %>
 
