--- a/app/views/experiences/edit.html.erb
+++ b/app/views/experiences/edit.html.erb
@@ -13,11 +13,11 @@
 <p>形式</p>
 <%= f.select :format, [['個人面接(1:1)','個人面接(1:1)'],['個人面接(1:多)','個人面接(1:多)'],['集団面接','集団面接'],['リモート面接','リモート面接']], include_blank: "選択して下さい" %>
 <p>雰囲気</p>
-<%= f.text_area :atomosphere %>
+<%= f.text_area :atomosphere, size: "100x100" %>
 <p>質問</p>
-<%= f.text_area :question %>
+<%= f.text_area :question, size: "100x100" %>
 <p>感想</p>
-<%= f.text_area :impression %>
+<%= f.text_area :impression, size: "100x100" %>
 <%= f.submit '変更を保存' %>
 
 <% end %>
