--- a/app/views/experiences/index.html.erb
+++ b/app/views/experiences/index.html.erb
@@ -1,11 +1,11 @@
 <p>ユーザー情報</p>
-<% if @user.image.attached? %>
-<%= image_tag @user.image, size: "100x100" %>
+<% if current_user.image.attached? %>
+<%= image_tag current_user.image, size: "100x100" %>
 <% else %>
 <%= image_tag 'no_image.jpg', size: "100x100" %>
 <% end %>
-<%= @user.name %>
-<%= link_to 'マイページ', user_path(@user.id) %>
+<%= current_user.name %>
+<%= link_to 'マイページ', user_path(current_user.id) %>
 <%= link_to '投稿する', new_experience_path %>
 <h3>投稿一覧</h3>
 <% @experiences.each do |experience| %>
