--- a/app/views/experiences/new.html.erb
+++ b/app/views/experiences/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: @experience, url: experience_path(@experience.id), local: true do |f| %>
+<%= form_with model: @experience, url: experiences_path, local: true do |f| %>
 <p>タイトル</p>
 <%= f.text_field :title %>
 <p>企業名</p>
@@ -10,13 +10,13 @@
 <p>時間</p>
 <%= f.select :time, [['30分未満','30分未満'],['約30分','約30分'],['約45分','約45分'],['約1時間','約1時間'],['1時間以上','1時間以上']], include_blank: "選択して下さい" %>
 <p>形式</p>
-<%= f.select :format, [['個人面接(1:1)','個人面接(1:1)'],['個人面接(1:多)','個人面接(1:多)'],['集団面接','集団面接'],['リモート面接','リモート面接']], include_blank: "選択して下さい" %>
+<%= f.select :format, [['個人面接(1：1)','個人面接(1：1)'],['個人面接(1：多)','個人面接(1：多)'],['集団面接','集団面接'],['リモート面接','リモート面接']], include_blank: "選択して下さい" %>
 <p>雰囲気</p>
-<%= f.text_area :atomosphere %>
+<%= f.text_area :atomosphere, size: "60x5" %>
 <p>質問</p>
-<%= f.text_area :question %>
+<%= f.text_area :question, size: "60x10" %>
 <p>感想</p>
-<%= f.text_area :impression %>
+<%= f.text_area :impression, size: "60x10" %>
 <%= f.submit '投稿する' %>
 
 <% end %>
