--- a/app/views/users/unsubscribe.html.erb
+++ b/app/views/users/unsubscribe.html.erb
@@ -3,5 +3,5 @@
 自身での投稿はできなくなります。</br>
 退会する場合は、「退会する」をクリックしてください。</p>
 
-<%= link_to '退会する', user_path(@user.id), method: :delete, "data-confirm"=>"本当に退会しますか？" %>
-<%= link_to 'キャンセル',user_path(@user.id) %>
+<%= link_to '退会する', user_path(current_user.id), method: :delete, "data-confirm"=>"本当に退会しますか？" %>
+<%= link_to 'キャンセル',user_path(current_user.id) %>
