--- a/app/views/experiences/new.html.erb
+++ b/app/views/experiences/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: @experience, url: experiences_path, local: true do |f| %>
+<%= form_with model: @experience, local: true do |f| %>
 <p>タイトル</p>
 <%= f.text_field :title %>
 <p>企業名</p>
