--- a/app/views/genres/edit.html.erb
+++ b/app/views/genres/edit.html.erb
@@ -1,5 +1,5 @@
 <h3>ジャンル編集</h3>
-<%= form_with model: @genre, url: genres_path, local: true do |f| %>
+<%= form_with model: @genre, url: genre_path, local: true do |f| %>
 <%= f.text_field :name %>
 <%= f.submit '変更を保存' %>
 <% end %>
