--- a/app/views/experiences/search.html.erb
+++ b/app/views/experiences/search.html.erb
@@ -1,7 +1,9 @@
 <p>ユーザー情報</p>
-<%= render 'experiences/user_information'
+<%= render 'experiences/user_information' %>
 
-<h3>投稿一覧</h3>
+<h3>検索結果</h3>
 <%= render 'experiences/sort', experience: @experience %>
 
 <%= render 'experiences/sort_result', experiences: @experiences %>
+
+
