--- a/app/views/experiences/search.html.erb
+++ b/app/views/experiences/search.html.erb
@@ -1,9 +1,8 @@
 <p>ユーザー情報</p>
-<%= render 'experiences/user_information' %>
+<%= render 'user_information' %>
 
 <h3>検索結果</h3>
-<%= render 'experiences/sort', experience: @experience %>
+<%= render 'sort', experience: @experience %>
 
-<%= render 'experiences/sort_result', experiences: @experiences %>
-
+<%= render 'sort_result', experiences: @experiences %>
 
