--- a/app/views/experiences/_user_information.html.erb
+++ b/app/views/experiences/_user_information.html.erb
@@ -1,3 +1,5 @@
+<% if user_signed_in? %>
+
 <% if current_user.image.attached? %>
 <%= image_tag current_user.image, size: "100x100" %>
 <% else %>
@@ -6,3 +8,7 @@
 <%= current_user.name %>
 <%= link_to 'マイページ', user_path(current_user.id) %>
 <%= link_to '投稿する', new_experience_path %>
+
+<% else %>
+
+<% end %>
