--- a/app/views/experiences/index.html.erb
+++ b/app/views/experiences/index.html.erb
@@ -1,7 +1,12 @@
+<%= form_with url: company_search_path, method: :get, local: true do |f| %>
+<%= f.text_field :keyword, value: @keyword %>
+<%= f.submit "検索" %>
+<% end %>
+
 <p>ユーザー情報</p>
-<%= render 'experiences/user_information'
+<%= render 'user_information' %>
 
 <h3>投稿一覧</h3>
-<%= render 'experiences/sort', experience: @experience %>
+<%= render 'sort', experience: @experience %>
 
-<%= render 'experiences/sort_result', experiences: @experiences %>
+<%= render 'sort_result', experiences: @experiences %>
