--- a/app/views/experiences/index.html.erb
+++ b/app/views/experiences/index.html.erb
@@ -7,6 +7,6 @@
 <%= render 'user_information' %>
 
 <h3>投稿一覧</h3>
-<%= render 'sort', experience: @experience %>
+<%= render 'sort'%>
 
 <%= render 'sort_result', experiences: @experiences %>
