--- a/app/views/experiences/index.html.erb
+++ b/app/views/experiences/index.html.erb
@@ -5,6 +5,7 @@
 
 <%= form_with url: genre_search_path , method: :get, local: true do |f| %>
 <%= f.collection_check_boxes :genres, Genre.all, :id, :name %>
+<%= f.submit '検索' %>
 <% end %>
 
 <p>ユーザー情報</p>
