--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the homes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.top-box{
+  width: 600px;
+  height: 500px;
+  margin: 70px auto;
+}
+
+.text-box{
+  padding: 0 50px;  
+}
+
+.botton-box{
+  margin: 70px auto;
+  padding: 0 50px;
+}
