--- a/app/views/experiences/show.html.erb
+++ b/app/views/experiences/show.html.erb
@@ -1,12 +1,7 @@
 <p>ユーザー情報</p>
-<% if current_user.image.attached? %>
-<%= image_tag current_user.image, size: "100x100" %>
-<% else %>
-<%= image_tag 'no_image.jpg', size: "100x100" %>
-<% end %>
-<%= current_user.name %>
-<%= link_to 'マイページ', user_path(current_user.id) %>
-<%= link_to '投稿する', new_experience_path %>
+
+<%= render 'user_information' %>
+
 <h3>投稿詳細</h3>
 <p>タイトル</p>
 <%= @experience.title %>
