--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,14 @@
 
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+
   </head>
 
-  <body>
+  <body class="d-flex flex-column vh-100">
+  <header class="shadow-sm bg-white">
+  <nav class="navbar navbar-expand-lg navbar-light">
+  <div class="container">
     <%= link_to root_path do %>
     <h3>Success! Job Hunting</h3>
     <% end %>
@@ -19,9 +24,9 @@
     <p>投稿一覧</p>
     <% end %>
    <% if user_signed_in? %>
-   
+
     <%= link_to user_path(current_user.id) do %>
-    <p>マイページ</p>
+    マイページ
     <% end %>
 
     <%= link_to destroy_user_session_path, method: :delete do %>
@@ -37,7 +42,17 @@
     <p>ログイン</p>
     <% end %>
   <% end %>
-
+ </div>
+ </nav>
+ </header>
     <%= yield %>
   </body>
+ <footer class="bg-dark text-white pt-5 pb-4">
+ <div class="container">
+ <div class="row no-gutters">
+ <div class="col-md-4">
+ </div>
+ </div>
+ </div>
+ </footer>
 </html>
