--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,18 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+* {
+  margin: 0px;
+  padding: 0px;
+  text-decoration: none;
+}
+.unsubscribe-box{
+  width: 100%;
+  height: 430px;
+  margin: 70px auto;
+  text-align: center;
+}
+
+.unsubscribe-botton{
+  padding: 20px;
+}
