--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,6 +1,7 @@
+<body id = "top">
 <div class ="top-box">
 <div class ="text-box">
-<p>ようこそ！就職活動中の皆さん!</br>
+<p class ="text-white lead">ようこそ！就職活動中の皆さん!</br>
 当サイトは今まであなたがしてきた面接の体験を自由に投稿したり、</br>
 または、他のユーザーの体験を閲覧することができます！</br>
 就職活動は情報が命。当サイトで少しでも多くの情報を集めましょう！</br>
@@ -9,12 +10,13 @@
 
 <div class ="botton-box">
 <%= link_to new_user_registration_path do %>
-<p>今すぐ始める</p>
+<p class ="text-white lead">今すぐ始める</p>
 <% end %>
 
-<p>既にご登録済みの方は</p>
+<p class ="text-white lead">既にご登録済みの方は</p>
 <%= link_to new_user_session_path do %>
-<p>こちら</p>
+<pp class ="text-white lead">こちら</p>
 <% end %>
 </div>
 </div>
+</body>
