--- a/app/views/users/unsubscribe.html.erb
+++ b/app/views/users/unsubscribe.html.erb
@@ -1,7 +1,23 @@
+<div class="container">
+<div class="row">
+<div class = "mx-auto"></div>
+<div class = "unsubscribe-box">
 <h2>本当にに退会しますか？</h2>
 <p>退会後は他ユーザーの投稿は閲覧可能のままですが、</br>
 自身での投稿はできなくなります。</br>
 退会する場合は、「退会する」をクリックしてください。</p>
 
-<%= link_to '退会する', user_path(current_user.id), method: :delete, "data-confirm"=>"本当に退会しますか？" %>
-<%= link_to 'キャンセル',user_path(current_user.id) %>
+<div class = "unsubscribe-botton">
+<%= link_to user_path(current_user.id), method: :delete, "data-confirm"=>"本当に退会しますか？" do%>
+<button type="button" class="btn btn-danger" style="width:350px">退会する</button>
+<% end %>
+</div>
+
+<%= link_to user_path(current_user.id) do %>
+<button type="button" class="btn btn-success" style="width:350px">キャンセル</button>
+<% end %>
+
+</div>
+</div>
+</div>
+</div>
