--- a/app/assets/stylesheets/genres.scss
+++ b/app/assets/stylesheets/genres.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the genres controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+table th {
+  padding: 10px 10px;
+}
+
+table td {
+  padding: 10px 10px;
+}
+
+.genre-box{
+  margin: 20px auto 10px;
+}
+
