--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -6,6 +6,7 @@
   padding: 0px;
   text-decoration: none;
 }
+
 .unsubscribe-box{
   width: 100%;
   height: 430px;
@@ -15,4 +16,18 @@
 
 .unsubscribe-botton{
   padding: 20px;
+}
+
+
+.col-4{
+  padding: 10px;
+}
+
+.edit-user{
+  margin: 10px auto;
+}
+
+.user-button{
+  padding: 30px;
+  text-align: center;
 }
