--- a/app/views/genres/edit.html.erb
+++ b/app/views/genres/edit.html.erb
@@ -1,5 +1,29 @@
+<div class="container">
+<div class="row">
+<div class ="col-ml-4"></div>
 <h3>ジャンル編集</h3>
 <%= form_with model: @genre, url: genre_path, local: true do |f| %>
+</div>
+</div>
+<div class="container">
+<div class="row">
+<div class ="col-ml-4"></div>
+<table width="50%">
+<tbody>
+<tr>
+<th>
+業種名
+</th>
+<td>
 <%= f.text_field :name %>
-<%= f.submit '変更を保存' %>
+</td>
+<td>
+<input class="btn btn-success" type="submit" value="変更を保存">
 <% end %>
+</td>
+</tr>
+</tbody>
+</table>
+<table>
+</div>
+</div>
