--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,13 +1,20 @@
 <h3>会員情報編集</h3>
+<div class="edit-user">
 <%= form_with model: @user, url: user_path(@user.id), local: true do |f| %>
 <p>画像編集</p>
-<%= f.file_field :image %>
+<%= f.file_field :image %></br>
 <p>名前</p>
-<p>姓</p>
-<%= f.text_field :first_name %>
-<p>名</p>
-<%= f.text_field :last_name %>
-
-<%= f.submit '変更を保存' %>
-
+姓</br>
+<%= f.text_field :first_name %></br>
+</br>
+名</br>
+<%= f.text_field :last_name %></br>
+</br>
+自己紹介</br>
+<%= f.text_area :introduction, size: "50x8" %>
+</br>
+<div class ="user-button">
+<input class="btn btn-success" type="submit" style="width:220px" value="変更を保存">
+</div>
 <% end %>
+</div>
