--- a/app/views/genres/edit.html.erb
+++ b/app/views/genres/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 <div class="row">
 <div class ="col-ml-4"></div>
-<h3>ジャンル編集</h3>
+<h3 class = "show">ジャンル編集</h3>
 <%= form_with model: @genre, url: genre_path, local: true do |f| %>
 </div>
 </div>
