--- a/app/views/experiences/show.html.erb
+++ b/app/views/experiences/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 <div class="row">
 <div class = "col-8">
-<h3>投稿詳細</h3>
+<h3 class = "show">投稿詳細</h3>
 </div>
 <div class = "col-4">
 <% if @experience.favorited_by?(current_user) %>
@@ -62,11 +62,14 @@
 <% @experience.comments.each do |comment| %>
 <%= comment.user.name %>
 <%= comment.created_at.strftime('%Y/%m/%d') %><%= comment.experience_comment %>
+<% if user_signed_in? %>
 <% if comment.user == current_user %>
 <%= link_to "削除", experience_comment_path(comment.experience, comment), method: :delete %>
 <% end %>
 <% if current_user.admin? %>
 <%= link_to "削除", experience_comment_path(comment.experience, comment), method: :delete %>
+<% end %>
+<% else %>
 <% end %>
 <% end %>
 
