--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 <div class="row">
 <div class ="col-ml-4"></div>
-<h3>ジャンル一覧・追加</h3>
+<h3 class = "show">ジャンル一覧・追加</h3>
 </div>
 </div>
 
