--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<h3>会員情報編集</h3>
+<h3 class = "show">会員情報編集</h3>
 <div class="edit-user">
 <%= form_with model: @user, url: user_path(@user.id), local: true do |f| %>
 <p>画像編集</p>
