--- a/app/assets/stylesheets/signup.scss
+++ b/app/assets/stylesheets/signup.scss
@@ -41,12 +41,12 @@
   margin: 0 40px;
 }
 
-.login-botton{
+.login-button{
   padding: 40px;
   text-align: center;
 }
 
-.signup-botton{
+.signup-button{
   padding: 30px;
   text-align: center;
 }
