--- a/app/views/experiences/new.html.erb
+++ b/app/views/experiences/new.html.erb
@@ -39,7 +39,7 @@
 <p>感想</p>
 <%= f.text_area :impression, size: "60x10" %>
 </br>
-<div class = "post-botton">
+<div class = "post-button">
 <input class="btn btn-primary" type="submit" style="width:220px" value="投稿">
 </div>
 <% end %>
