--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -33,7 +33,7 @@
 <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
 </div>
 
-<div class="signup-botton">
+<div class="signup-button">
 <input class="btn btn-success" type="submit" style="width:220px" value="新規登録">
 </div>
 
