--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,15 +18,37 @@
 <th>自己紹介</th>
 <td><%= @user.introduction %></td>
 </tr>
-</tbody>
-</table>
-<%= link_to '編集する', edit_user_path(@user.id) %>　　　　
-<%= link_to '退会する', users_unsubscribe_path %>
+<tr>
+<th>ユーザー設定</th>
+<td>
 <% if current_user.admin? %>
 <% current_user.admin == true %>
-<%= link_to "ジャンル追加・一覧", genres_path %>
+管理者
+<% else %>
+一般ユーザー
+<% end %>
+　　<%= link_to '編集する', edit_user_path(@user.id) %>
+</td>
+</tr>
+</tbody>
+</table>
+
+<div class = "user-button">
+<%= link_to users_unsubscribe_path do %>
+<button type="button" class="btn btn-danger" style="width:600px">退会する</button>
+<% end %>
+</div>
+
+<div class = "user-button">
+<% if current_user.admin? %>
+<% current_user.admin == true %>
+<%= link_to genres_path do %>
+<button type="button" class="btn btn-primary" style="width:600px">ジャンル追加・一覧</button>
+<% end %>
 <% else %>
 <% end %>
+</div>
+
 <h3 class = "user-show">投稿一覧</h3>
 <table class ="list-table">
 <thead>
@@ -45,9 +67,13 @@
 <%= link_to experience_path(experience.id) do %>
 <%= experience.title %>
 <% end %></br>
-☆<%= experience.favorites.count %>　　　　コメント(<%= experience.comments.count %>)
+☆<%= experience.favorites.count %>　
+　　　　コメント(<%= experience.comments.count %>)
 </th>
-<td><%= link_to '＋' ,edit_experience_path(experience.id) %>　　　　　　<%= link_to '×', experience_path(experience.id), method: :delete, "date-confirm" => "本当に削除しますか？" %></td>
+<td>
+　　<%= link_to '＋' ,edit_experience_path(experience.id) %>
+　　　　　<%= link_to '×', experience_path(experience.id), method: :delete, "date-confirm" => "本当に削除しますか？" %>
+</td>
 </tr>
 <% end %>
 </tbody>
@@ -82,6 +108,11 @@
 </tbody>
 </table>
 
-<%= link_to '投稿する', new_experience_path %>
+<div class = "user-button">
+<%= link_to new_experience_path do %>
+<button type="button" class="btn btn-primary" style="width:600px">投稿する</button>
+<% end %>
+</div>
+
 
 
