--- a/app/views/experiences/edit.html.erb
+++ b/app/views/experiences/edit.html.erb
@@ -31,7 +31,7 @@
 <p>感想</p>
 <%= f.text_area :impression, size: "60x10" %>
 </br>
-<div class = "post-botton">
+<div class = "post-button">
 <input class="btn btn-success" type="submit" style="width:220px" value="変更を保存">
 </div>
 <% end %>
