--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -35,11 +35,13 @@
 .user-table{
   border: 1px solid;
   margin :20px auto;
+  width: 680px;
 }
 
 .user-table th{
   border: 1px solid;
   background-color: #CCCCCC;
+  width: 140px;
 }
 
 .user-table tr{
