--- a/app/assets/stylesheets/experiences.scss
+++ b/app/assets/stylesheets/experiences.scss
@@ -49,18 +49,22 @@
   border: 1px solid;
 }
 
+.col-3{
+  margin: 40px 0;
+}
+
 .comment-box{
   border-top: 1px solid;
   margin: 0 400px;
   padding: 50px;
 }
 
-tbody{
-  border-bottom: 1px solid;
-}
-
 .experience-table{
   margin-left: 70px;
+}
+
+.experience-table tbody{
+  border-bottom: 1px solid;
 }
 
 .sort-box{
@@ -69,4 +73,9 @@ tbody{
 
 .company-search{
   background-color: #CCCCCC;
+}
+
+.genre-edit-box{
+  width: 100%;
+  height: 500px;
 }
