--- a/app/views/genres/edit.html.erb
+++ b/app/views/genres/edit.html.erb
@@ -1,3 +1,4 @@
+<div class = "genre-edit-box">
 <div class="container">
 <div class="row">
 <div class ="col-ml-4"></div>
@@ -7,8 +8,9 @@
 </div>
 <div class="container">
 <div class="row">
-<div class ="col-ml-4"></div>
-<table width="50%">
+<div class ="col-3"></div>
+<div class ="col-9">
+<table>
 <tbody>
 <tr>
 <th>
@@ -19,11 +21,12 @@
 </td>
 <td>
 <input class="btn btn-success" type="submit" value="変更を保存">
-<% end %>
 </td>
 </tr>
 </tbody>
 </table>
-<table>
+<% end %>
+</div>
+</div>
 </div>
 </div>
